<resources>
    <string name="app_name">ProgrammingLanguage</string>
    <string name="language_name">Programming Language Name</string>
    <string name="detail">Detail</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">CardView</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="developer">Developer</string>
    <string name="paradigm">Paradigm</string>
    <string name="about">About</string>
    <string name="username">Fatkhi Nur Akhsan</string>
    <string name="email">fatkhinurakhsan@gmail.com</string>
    <string name="toast">You choose</string>
    <string name="language_icon">Programming Language Icon</string>
    <string name="avatar">My profile picture</string>
</resources>