<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp"
    card_view:cardCornerRadius="4dp">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/language_icon"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/language_name" />

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@color/text"
            tools:text="@string/detail" />

        <Button
            android:id="@+id/btn_set_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>